[package]
name = "game"
version = "0.1.0"
edition = "2021"

[lib]
name = "game"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = {version="*", features=["image"]}
itertools = "*"
yaml-rust = "0.4"
notify = "*"
