[package]
name = "game"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
name = "game"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "*"
yaml-rust = "0.4"

[target.'cfg(target_os = "linux")'.dependencies.sdl2]
version = "0.35"
default-features = false
features = ["ttf","image"]

[target.'cfg(target_os = "windows")'.dependencies.sdl2]
version = "0.35"
default-features = false
features = ["ttf","image"]

[target.'cfg(target_os = "macos")'.dependencies.sdl2]
version = "0.35"
default-features = false
features = ["ttf","image","use_mac_framework"]
